Updated demo_03 to use Liberated Pixel Cup assets.

--- a/demos/03_animations/demo_03.css
+++ b/demos/03_animations/demo_03.css
@@ -1,3 +1,15 @@
+h1 {
+    text-align: center;
+}
+
+#content {
+    margin: auto;
+    max-width: 800px;
+    text-align: justify;
+}
+#page {
+    text-align: center;
+}
 
 .ani_frame {
     position: relative;
