--- a/demos/03_animations/demo_03.css
+++ b/demos/03_animations/demo_03.css
@@ -16,8 +16,8 @@ h1 {
     display: inline-block;
     width: 128px;
     height: 128px;
-    background-color: green;
-    border: 1px solid darkgreen;
+    background-color: #999;
+    border: 1px solid #444;
     border-radius: 4px;
     margin: 10px;
     box-shadow: 0px 5px 20px #444;
@@ -28,6 +28,6 @@ h1 {
     left: 39px;
     width: 48px;
     height: 48px;
-    background-color: green;
-    border: 1px dashed lightgreen;
+    background-color: #999;
+    border: 1px dashed white;
 }
