Issue #3 rethemed demos 02 and 03

--- a/demos/02_keyboard_controls/animations.css
+++ b/demos/02_keyboard_controls/animations.css
@@ -42,7 +42,7 @@
         background-color: #a2314e;
     }
     100% {
-        background-color: #ccc;
+        background-color: #eee;
     }
 }
 
@@ -75,7 +75,7 @@
         background-color: #b1002e;
     }
     100% {
-        background-color: #ccc;
+        background-color: #eee;
     }
 }
 
@@ -124,7 +124,7 @@
         background-color: #a2314e;
     }
     100% {
-        background-color: #ccc;
+        background-color: #eee;
     }
 }
 
@@ -157,6 +157,6 @@
         background-color: #b1002e;
     }
     100% {
-        background-color: #ccc;
+        background-color: #eee;
     }
 }
