--- a/demos/04_character_test/demo_04.css
+++ b/demos/04_character_test/demo_04.css
@@ -29,7 +29,7 @@
     background-repeat: no-repeat;
     background-position: center center;
     z-index: 400;
-    opacity: .9;
+    opacity: .96;
 }
 
 #backdrop {
@@ -53,18 +53,10 @@
     left: 144px;
 }
 
-#test {
+.actor {
     position: absolute;
-    background-color: white;
-    width: 32px;
-    height: 32px;
-    border-top: 16px solid red;
-    border-left: 8px solid red;
-    border-right: 8px solid red;
-    opacity: .5;
+    width: 48px;
+    height: 48px;
     margin-left: -24px;
     margin-top: -32px;
-
-    top: 96px;
-    left: 128px;
 }
