Issue #8 animiations are now scheduled in batches.

--- a/demos/04_interactivity/demo_04.css
+++ b/demos/04_interactivity/demo_04.css
@@ -23,6 +23,18 @@
     transform: rotateZ(-10deg);
 }
 
+#fps_counter {
+    position: absolute;
+    right: 10px;
+    top: -1em;
+    color: black;
+    text-align: right;
+}
+
+#fps {
+    font-weight: bold;
+}
+
 
 #overhang {
     background-image: url('cave_overhangs.png');
