--- a/demos/demo_common.css
+++ b/demos/demo_common.css
@@ -71,3 +71,39 @@ a:hover {
 a:not([href]) {
     color: #ccc;
 }
+
+#attribution_area {
+    display: none;
+    position: relative;
+    width: 820px;
+    margin: auto;
+    margin-top: 1em;
+    padding: 10px;
+    border-radius: 3px;
+    background-color: #eee;
+    margin-bottom: 1em;
+}
+
+.mgrl_asset_license {
+    position: relative;
+    padding: 10px;
+    with: 710px;
+    margin-left: 90px;
+}
+
+.mgrl_asset_license > a:first-child {
+    position: absolute;
+    display: block;
+    width: 80px;
+    left: -80px;
+    top: 50%;
+    margin-top: -7px;
+}
+
+.mgrl_asset_license > div {
+    font-size: 12px;
+}
+
+.mgrl_asset_license .derived_work {
+    display: block;
+}
