--- a/site_media/mgrl_style.css
+++ b/site_media/mgrl_style.css
@@ -11,13 +11,11 @@ body {
     left: 0px;
     width: 100%;
     height: 100%;
-    background-image: url('bullshot.jpg');
-    background-position: top center;
-    background-size: auto 100%;
+    background-color: #eee;
 }
 
 a {
-    color: #a9cc47;
+    color: #bbf818;
     text-decoration: none;
 }
 a:hover {
