--- a/site_media/mgrl_style.css
+++ b/site_media/mgrl_style.css
@@ -1,5 +1,6 @@
 body {
-    font-family: sans-serif;
+    font-family: GoudyBookletter1911;
+    font-size: 19px;    
 }
 
 #bg_demo {
@@ -29,7 +30,7 @@ ul {
     line-height: 2em;
     vertical-align: center;
     padding-left: 1em;
-    padding-top: 1em;
+    padding-top: .5em;
 }
 
 .overlay {
@@ -229,7 +230,7 @@ ul {
 .fine_print > p {
     line-height: 1em;
     text-indent: 0px;
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .demo_link {
