--- a/site_media/mgrl_style.css
+++ b/site_media/mgrl_style.css
@@ -145,8 +145,9 @@ ul {
     display: block;
     position: absolute;
     top: 40px;
-    left: 50%;
     right: 20px;
+    max-width: 700px;
+    width: 100%;
     bottom: 40px;
     overflow-y: auto;
     padding-left: 20px;
@@ -158,8 +159,9 @@ ul {
     display: block;
     position: absolute;
     top: 6px;
-    left: 50%;
     right: 20px;
+    max-width: 742px;
+    width: 100%;
     height: 48px;
     margin-left: -1px;
     margin-right: -1px;
