basic_project template uses autoscale prefab now

--- a/templates/basic_project/index.html
+++ b/templates/basic_project/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" type="text/css" href="ui.css" />
   
 </head><body>
-  <div id="demo_area" class="fullscreen">
+  <div id="demo_area">
     <div id="fps_counter">FPS:<span id="fps">???</span></div>
-    <canvas id="gl_canvas" class="demo_area" width=840 height=630>
+    <canvas id="gl_canvas" class="fullscreen" width=840 height=630>
       Your browser does not appear to support HTML5 canvas and/or webgl.
     </canvas>
   </div>
