#92 added begining of css theme for m.pages

--- a/templates/basic_project/index.html
+++ b/templates/basic_project/index.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <script type="text/javascript" src="libs/gl-matrix.js"></script>
   <script type="text/javascript" src="libs/mgrl.js"></script>
+  <link rel="stylesheet" type="text/css" href="libs/theme.css" />
   
   <script type="text/javascript" src="project.js"></script>
   <link rel="stylesheet" type="text/css" href="ui.css" />
