--- a/demos/compositing_test/ui.css
+++ b/demos/compositing_test/ui.css
@@ -27,3 +27,9 @@ canvas {
     left: 0px;
     z-index: 20;
 }
+
+#loading_screen {
+    font-size: 100px;
+    text-align: center;
+    margin-top: 100px;
+}
