changed the default image-rendering property for canvas elements

--- a/demos/compositing_demo/ui.css
+++ b/demos/compositing_demo/ui.css
@@ -5,7 +5,8 @@ body {
 }
 
 canvas {
-    image-rendering: optimizeSpeed;
+    image-rendering: -moz-pixelated;
+    image-rendering: pixelated;
 }
 
 #gl_canvas.fullscreen {
