--- a/templates/basic_project/ui.css
+++ b/templates/basic_project/ui.css
@@ -5,7 +5,8 @@ body {
 }
 
 canvas {
-    image-rendering: optimizeSpeed;
+    image-rendering: -moz-pixelated;
+    image-rendering: pixelated;
 }
 
 #gl_canvas.fullscreen {
