--- a/demos/gl_common.css
+++ b/demos/gl_common.css
@@ -14,7 +14,7 @@
 .mgrl_asset_license {
     position: relative;
     padding: 10px;
-    with: 710px;
+    width: 710px;
     margin-left: 90px;
 }
 
