--- a/demos/dynamic_glsl/demo.css
+++ b/demos/dynamic_glsl/demo.css
@@ -13,7 +13,7 @@
 }
 #controls.reveal {
     display: block;
-    animation-duration: 1s;
+    animation-duration: 2s;
     animation-name: reveal;
 }
 
@@ -54,6 +54,7 @@
     background-color: rgba(255,0,0, 0.1);
     padding: 5px;
     box-sizing: border-box;
+    white-space: pre-wrap;
 }
 
 #editor #button_area {
