--- a/demos/dynamic_glsl/demo.css
+++ b/demos/dynamic_glsl/demo.css
@@ -72,7 +72,7 @@
 button {
     border: 1px outset black;
     border-radius: 3px;
-    background-color: transparent;
+    background-color: white;
     color: black;
 }
 
