--- a/demos/dynamic_glsl/demo.css
+++ b/demos/dynamic_glsl/demo.css
@@ -24,7 +24,7 @@
 
 #editor, #sidebar {
     position: absolute;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.6);
     color: black;
     border: 1px solid #333;
     box-shadow: 2px 3px 0px 0px rgba(0, 0, 0, 0.2);
@@ -37,19 +37,21 @@
     top: 0px;
     left: 0px;
     box-sizing: border-box;
-    width: 400px;
+    width: 550px;
     height: 100%;
     padding: 5px;
 }
 
 #editor textarea {
     color: black;
-    background-color: rgba(0,0,0, 0.1);
+    background-color: rgba(255, 255, 255, 0.5);
     border: 1px solid black;
     margin: 0px;
     resize: none;
     height: 100%;
     box-sizing: border-box;
+    font-size: 12px;
+    font-family: mono;
 }
 
 #editor #compiler_output {
